includes/ir0/print.h

// ============ FUNCIONES BÁSICAS DE IMPRESIÓN ============

/*
 * Imprime una cadena de caracteres en la posición actual del cursor.
 * Procesa cada carácter hasta encontrar el terminador '\0'.
 * Maneja automáticamente saltos de línea y caracteres especiales.
 * 
 * @param str: Cadena terminada en null a imprimir
 */
void print(const char *str);
// ============ FUNCIONES DE CONVENIENCIA ============

/*
 * Imprime mensaje de error en rojo.
 * Útil para debugging y logging de interrupciones.
 */
void print_error(const char *str);
/*
 * Imprime mensaje de advertencia en amarillo.
 */
void print_warning(const char *str);
/*
 * Imprime mensaje de éxito en verde.
 */
void print_success(const char *str);