fs/vfs.h

/* Open file handle — created by vfs_open, freed by vfs_close */
struct vfs_file {
    char path[VFS_PATH_MAX];
    off_t pos;
    int flags;
    int ref_count;
};
/* File operations — @flags must be IR0_O_* (see includes/ir0/open_flags.h) */
int vfs_open(const char *path, int flags, mode_t mode, struct vfs_file **out);
int vfs_read(struct vfs_file *f, char *buf, size_t count);
int vfs_write(struct vfs_file *f, const char *buf, size_t count);
int vfs_close(struct vfs_file *f);